--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 </div>
 <script src="https://lib.baomitu.com/jquery/1.12.4/jquery.js" charset="utf-8"></script>
 <script src="https://cdn.qianqi.net/3600/js/js.js" charset="utf-8"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yellowside/jquery/js.js"></script>
 </body>
 <script>
 var _hmt = _hmt || [];
