--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
   <div class="container">
     <div class="bar-left">
       <ul>
-		<li><a href="https://tv.bingdou.net/" target="_blank">电视直播</a></li>
-		<li><a href="https://v.bingdou.net/" target="_blank">免费影院</a></li>
+	<li><a href="https://tv.bingdou.net/" target="_blank">看电视</a></li>
+		<li><a href="https://v.bingdou.net/" target="_blank">看电影</a></li>
+		<li><a href="https://music.bingdou.net/" target="_blank">听音乐</a></li>
 		<li><a href="https://vod.bingdou.net/" target="_blank">视频云播</a></li>
-		<li><a href="http://music.bingdou.net/" target="_blank">音乐下载</a></li>
 		<li><a href="https://so.bingdou.net/" target="_blank">实用搜索</a></li>
+		<li><a href="http://win.bingdou.net/" target="_blank">系统下载</a></li>
 		<li><a href="https://yeah.qq.com/?q=219574" target="_blank">搜狗导航</a></li>
-		<li><a href="https://www.2345.com/?kbingdou" target="_blank">2345导航</a></li>
 		</ul>
     </div>
     <div class="bar-right">
