--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<li><a href="https://music.bingdou.net/" target="_blank">听音乐</a></li>
 		<li><a href="https://vod.bingdou.net/" target="_blank">视频云播</a></li>
 		<li><a href="https://so.bingdou.net/" target="_blank">实用搜索</a></li>
-		<li><a href="http://win.bingdou.net/" target="_blank">系统下载</a></li>
+		<li><a href="https://win.bingdou.net/" target="_blank">系统下载</a></li>
 		<li><a href="https://yeah.qq.com/?q=219574" target="_blank">搜狗导航</a></li>
 		</ul>
     </div>
