--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="zh-cn">
 <head>
 <meta charset="utf-8">
-<link rel="dns-prefetch" href="//cdn.qianqi.net" />
+<link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
 <link rel="dns-prefetch" href="//lib.baomitu.com" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>3600网址导航 - 安全实用的网址导航 - 3600导航</title>
 <meta name="keywords" content="3600网址导航,网址导航,3600导航,工作导航,网站大全">
 <meta name="description" content="3600网址导航是一个安全实用的网址导航，收录了工作、社交、生活、音乐、购物等领域的优质网站，为广大用户提供高效率的上网导航服务。">
-<link rel="shortcut icon" type="image/x-icon" href="https://cdn.qianqi.net/3600/images/favicon.png">
-<link href="https://cdn.qianqi.net/3600/css/style.css" rel="stylesheet">
+<link rel="shortcut icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yellowside/3600/images/favicon.png">
+<link href="https://cdn.jsdelivr.net/gh/yellowside/3600/css/style.css" rel="stylesheet">
 <link href="https://lib.baomitu.com/font-awesome/3.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="body-home body-website">
 <div class="header">
   <div class="container">
     <h1 class="logo">
-      <strong> <a href="https://www.3600.win" title="3600网址导航 - 安全实用的网址导航"> <img src="https://cdn.qianqi.net/3600/images/logo.png" alt="3600网址导航"> </a> </strong>
+      <strong> <a href="https://www.3600.win" title="3600网址导航 - 安全实用的网址导航"> <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/logo.png" alt="3600网址导航"> </a> </strong>
     </h1>
     <div class="primary-menus">
       <ul class="selects">
@@ -41,7 +41,7 @@
 			<input type="text" name="wd" class="s" value="" placeholder="搜网页">
             <button type="submit" name="" class="btn">网页搜索</button>
           </form>
-          <form class="search hidden" id="music-search" action="http://music.bingdou.net" method="get" target="_blank">
+          <form class="search hidden" id="music-search" action="https://music.bingdou.net" method="get" target="_blank">
             <input type="hidden" name="type" value="netease">
 			<input type="text" name="name" class="s" value="" placeholder="音乐搜索下载">
             <button type="submit" name="" class="btn">音乐搜索</button>
@@ -51,12 +51,12 @@
             <input type="text" name="query" class="s" value="" placeholder="搜微信公众号文章">
             <button type="submit" name="" class="btn">微信搜索</button>
           </form>
-          <form class="search hidden" id="shop-search" action="http://tao.bingdou.net/index.php" method="get" target="_blank">
+          <form class="search hidden" id="shop-search" action="https://tao.bingdou.net/index.php" method="get" target="_blank">
             <input type="hidden" name="r" value="l">
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
           </form>
-		  <form class="search hidden" id="vod-search" action="http://v.bingdou.net/so/" method="get" target="_blank">
+		  <form class="search hidden" id="vod-search" action="https://v.bingdou.net/so/" method="get" target="_blank">
 			<input type="text" name="wd" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
             <button type="submit" name="" class="btn">影视搜索</button>
           </form>
@@ -85,8 +85,8 @@
     </div>
     <div class="bar-right">
       <span>特别推荐：</span>
-      <a href="https://tao.bingdou.net/" target="_blank"><i><img src="https://cdn.qianqi.net/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
-      <a href="https://v.huangbin.net/" target="_blank"><i><img src="http://stdl.qq.com/stdl/qb/assets/navigate/asset/img/beauty.png" alt="美女秀场"></i>美女秀场</a>
+      <a href="https://tao.bingdou.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
+      <a href="https://v.huangbin.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>
 	  </div>
   </div>
 </div>
@@ -266,7 +266,7 @@
   <div class="container">
     <p>本网站设计及数据均受版权保护，任何公司及个人不得以任何方式复制，违者将依法追究责任，特此声明。</p>
     <p>
-      <span><a href="http://www.bingdou.net/about/">关于我们</a></span> <span><a href="http://www.bingdou.net/about/contact.html">联系我们</a></span> <span><a href="http://www.bingdou.net/about/links.html">友情链接</a></span> <span><a href="http://www.bingdou.net/about/map.html">网站地图</a></span>
+      <span><a href="https://www.bingdou.net/about/">关于我们</a></span> <span><a href="https://www.bingdou.net/about/contact.html">联系我们</a></span> <span><a href="https://www.bingdou.net/about/links.html">友情链接</a></span> <span><a href="https://www.bingdou.net/about/map.html">网站地图</a></span>
   </span>
     </p>
     <p>Copyright &copy; 2012-<script type="text/javascript">copyright=new Date();update=copyright.getFullYear();document.write(""+ update + "");</script> bingdou.net, All Rights Reserved.</p>
@@ -277,7 +277,7 @@
 	<a class="fixed-wechat"><span> <i class="icon-comments icon-large"></i></span>
 		<div class="wechat_div">
 			<div class="thumb">
-				<img src="https://cdn.qianqi.net/3600/images/wechat.jpg" alt="wechat">
+				<img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/wechat.jpg" alt="wechat">
 			</div>
 			<div class="wechat_info">
 				<h3>冰豆官方微信</h3>
@@ -288,7 +288,7 @@
 	<div id="back-top"><a href="#" alt="返回顶部"><span><i class="icon-arrow-up icon-large"></i></span></a></div>
 </div>
 <script src="https://lib.baomitu.com/jquery/1.12.4/jquery.js" charset="utf-8"></script>
-<script src="https://cdn.qianqi.net/3600/js/js.js" charset="utf-8"></script>
+<script src="https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js" charset="utf-8"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js"></script>
 </body>
 </html>
