--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
-document.writeln("<script src="https://lib.baomitu.com/jquery/1.12.4/jquery.js" charset="utf-8"></script>");
-document.writeln("<script src="https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js" charset="utf-8"></script>");
-document.writeln("<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js"></script>");
+document.writeln("<script src='https://lib.baomitu.com/jquery/1.12.4/jquery.js' charset='utf-8"></script>");
+document.writeln("<script src='https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js' charset='utf-8'></script>");
+document.writeln("<script type='text/javascript' src='https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js'></script>");
 });
 </script>
 </body>
