--- a/index.html
+++ b/index.html
@@ -287,12 +287,8 @@
 	</a>
 	<div id="back-top"><a href="#" alt="返回顶部"><span><i class="icon-arrow-up icon-large"></i></span></a></div>
 </div>
-<script type="text/javascript">
-$(document).ready(function(){
-document.writeln("<script src='https://lib.baomitu.com/jquery/1.12.4/jquery.js' charset='utf-8"></script>");
-document.writeln("<script src='https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js' charset='utf-8'></script>");
-document.writeln("<script type='text/javascript' src='https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js'></script>");
-});
-</script>
+<script src='https://lib.baomitu.com/jquery/1.12.4/jquery.js' charset='utf-8"></script>
+<script src='https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js' charset='utf-8'></script>
+<script type='text/javascript' src='https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js'></script>
 </body>
 </html>
