--- a/index.html
+++ b/index.html
@@ -289,9 +289,7 @@
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
-document.writeln("<script async='async' src='https://lib.baomitu.com/jquery/1.12.4/jquery.js'></script>");
-document.writeln("<script async='async' src='https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js'></script>");
-document.writeln("<script async='async' src='https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js'></script>");
+document.writeln("<script async='async' src='https://lib.baomitu.com/jquery/1.12.4/jquery.js'></script><script async='async' src='https://cdn.jsdelivr.net/gh/yellowside/3600/js/js.js'></script><script async='async' src='https://cdn.jsdelivr.net/gh/yellowside/jquery/tj.js'></script>");
 });
 </script>
 </body>
