--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>3600网址导航 - 安全实用的网址导航 - 3600导航</title>
 <meta name="keywords" content="3600网址导航,网址导航,3600导航,工作导航,网站大全">
 <meta name="description" content="3600网址导航是一个安全实用的网址导航，收录了工作、社交、生活、音乐、购物等领域的优质网站，为广大用户提供高效率的上网导航服务。">
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yellowside/3600/css/style.css" />
 <link href="https://lib.baomitu.com/font-awesome/3.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body class="body-home body-website">
