--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
   <div class="container">
     <div class="bar-left">
       <ul class="">
-        <li><a href="https://tv.bingdou.net/" target="_blank">看电视</a></li>
-		<li><a href="https://v.bingdou.net/" target="_blank">看电影</a></li>
-		<li><a href="https://music.bingdou.net/" target="_blank">听音乐</a></li>
-		<li><a href="https://vod.bingdou.net/" target="_blank">视频云播</a></li>
+        <li><a href="https://tv.bingdou.xyz/" target="_blank">看电视</a></li>
+		<li><a href="https://v.bingdou.xyz/" target="_blank">看电影</a></li>
+		<li><a href="https://music.bingdou.xyz/" target="_blank">听音乐</a></li>
+		<li><a href="https://vod.bingdou.xyz/" target="_blank">视频云播</a></li>
 		<li><a href="https://so.bingdou.net/" target="_blank">实用搜索</a></li>
 		<li><a href="https://win.bingdou.net/" target="_blank">系统下载</a></li>
 	 </ul>
