--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="bar-right ">
       <span>特别推荐：</span>
-      <a href="https://tao.bingdou.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
+      <a href="https://tao.qianqi.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/tmall.png" alt="天猫优惠券"></i>天猫优惠券</a>
       <a href="https://v.huangbin.net/" target="_blank"><i><img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/beauty.png" alt="美女秀场"></i>美女秀场</a>    </div>
   </div>
 </div>
@@ -606,8 +606,8 @@
   </div></div></div></div><div class="part" id="design" data-title="在线购物"><h2 class=""><strong>在线购物</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://tao.bingdou.net" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tao.bingdou.net" alt="购物优惠券">
+  <a href="https://api.qianqi.net/go/?url=https://tao.qianqi.net" target="_blank">
+  <img src="https://api.qianqi.net/icon/?url=https://tao.qianqi.net" alt="购物优惠券">
   <h3>购物优惠券</h3>
   <p>每天实时更新千款天猫优惠券，纯人工筛选验货，限时限量特卖</p>
   </a>
