--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<input type="text" name="wd" class="s" value="" placeholder="搜网页">
             <button type="submit" name="" class="btn">网页搜索</button>
           </form>
-          <form class="search hidden" id="music-search" action="https://music.bingdou.net" method="get" target="_blank">
+          <form class="search hidden" id="music-search" action="https://music.bingdou.xyz" method="get" target="_blank">
             <input type="hidden" name="type" value="netease">
 			<input type="text" name="name" class="s" value="" placeholder="音乐搜索下载">
             <button type="submit" name="" class="btn">音乐搜索</button>
@@ -50,12 +50,12 @@
             <input type="text" name="query" class="s" value="" placeholder="搜微信公众号文章">
             <button type="submit" name="" class="btn">微信搜索</button>
           </form>
-          <form class="search hidden" id="shop-search" action="https://tao.bingdou.net/index.php" method="get" target="_blank">
+          <form class="search hidden" id="shop-search" action="https://tao.qianqi.net/index.php" method="get" target="_blank">
             <input type="hidden" name="r" value="l">
 			<input type="text" name="kw" class="s" value="" placeholder="搜天猫优惠券">
             <button type="submit" name="" class="btn">购物搜索</button>
           </form>
-		  <form class="search hidden" id="vod-search" action="https://v.bingdou.net/so/" method="get" target="_blank">
+		  <form class="search hidden" id="vod-search" action="https://v.bingdou.xyz/so/" method="get" target="_blank">
 			<input type="text" name="wd" class="s" value="" placeholder="搜电影、电视剧、综艺、动漫">
             <button type="submit" name="" class="btn">影视搜索</button>
           </form>
@@ -106,7 +106,7 @@
 <a class="hide" href="http://movie.mtime.com/all/list/" target="_blank">时光电影热门</a>
 <a class="hide" href="https://www.bilibili.com/ranking?spm_id_from=333.334.banner_link.1" target="_blank">B站热门排行</a>
 	</div>
-    <div class="link "><a class="" href="https://tao.bingdou.net/" target="_blank"><i class="icon-fire"></i> 冰豆精选 - 领券购物更省钱！</a></div>
+    <div class="link "><a class="" href="https://tao.qianqi.net/" target="_blank"><i class="icon-fire"></i> 冰豆精选 - 领券购物更省钱！</a></div>
   </div>
 </div>
 <div class="content">
@@ -210,8 +210,8 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://v.bingdou.net" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://v.bingdou.net" alt="冰豆影院">
+  <a href="https://api.qianqi.net/go/?url=https://v.bingdou.xyz" target="_blank">
+  <img src="https://api.qianqi.net/icon/?url=https://v.bingdou.xyz" alt="冰豆影院">
   <h3>冰豆影院</h3>
   <p>一款全能影视搜索引擎</p>
   </a>
@@ -461,8 +461,8 @@
   </div></div></div><div class="part" id="jiaocheng" data-title="在线直播"><h2 class=""><strong>在线直播</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://tv.bingdou.net" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tv.bingdou.net" alt="冰豆直播">
+  <a href="https://api.qianqi.net/go/?url=https://tv.bingdou.xyz" target="_blank">
+  <img src="https://api.qianqi.net/icon/?url=https://tv.bingdou.xyz" alt="冰豆直播">
   <h3>冰豆直播</h3>
   <p>集多家电视直播、影视直播、电台直播和音乐于一身的综合直播网站</p>
   </a>
