--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
   </div></div></div><div class="part" id="jiaocheng" data-title="在线直播"><h2 class=""><strong>在线直播</strong></h2><div class="items "><div class="row">
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://api.qianqi.net/go/?url=https://tv.bingdou.xyz" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tv.bingdou.xyz" alt="冰豆直播">
+  <a href="https://api.qianqi.net/go/?url=https://tv.bingdou.net" target="_blank">
+  <img src="https://api.qianqi.net/icon/?url=https://tv.bingdou.net" alt="冰豆直播">
   <h3>冰豆直播</h3>
   <p>集多家电视直播、影视直播、电台直播和音乐于一身的综合直播网站</p>
   </a>
