--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="part" id="frontweb" data-title="常用网站"><h2 class=""><strong>常用网站</strong></h2><div class="items "><div class="row"><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://wx.qq.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://wx.qq.com" alt="微信网页版">
+  <img src="https://res.wx.qq.com/a/wx_fed/assets/res/NTI4MWU5.ico" alt="微信网页版">
   <h3>微信网页版</h3>
   <p>一款跨平台的通讯工具</p>
   </a>
@@ -131,7 +131,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://mail.qq.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://mail.qq.com" alt="QQ邮箱">
+  <img src="https://mail.qq.com/zh_CN/htmledition/images/favicon/qqmail_favicon_48h.png" alt="QQ邮箱">
   <h3>QQ邮箱</h3>
   <p>高效稳定便捷的电子邮件服务</p>
   </a>
@@ -139,7 +139,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://mail.163.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://mail.163.com" alt="网易163免费邮箱">
+  <img src="https://mail.163.com/favicon.ico" alt="网易163免费邮箱">
   <h3>网易163免费邮箱</h3>
   <p>中文邮箱第一品牌</p>
   </a>
@@ -147,7 +147,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.12306.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.12306.cn" alt="中国铁路12306">
+  <img src="https://www.12306.cn/index/images/favicon.ico" alt="中国铁路12306">
   <h3>中国铁路12306</h3>
   <p>铁路服务客户的重要窗口</p>
   </a>
@@ -155,7 +155,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://map.baidu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://map.baidu.com" alt="百度地图">
+  <img src="https://map.baidu.com/favicon.ico" alt="百度地图">
   <h3>百度地图</h3>
   <p>浏览地图、搜索地点、查询公交驾车线路、查看实时路况</p>
   </a>
@@ -163,7 +163,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://fanyi.baidu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://fanyi.baidu.com" alt="百度翻译">
+  <img src="https://fanyi-cdn.cdn.bcebos.com/static/translation/img/favicon/favicon-32x32_ca689c3.png" alt="百度翻译">
   <h3>百度翻译</h3>
   <p>提供即时免费200+语言翻译服务</p>
   </a>
@@ -244,7 +244,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.pptv.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.pptv.com" alt="PP视频">
+  <img src="https://sr1.pplive.cn/mcms/nav/images/favicon.ico" alt="PP视频">
   <h3>PP视频</h3>
   <p>国内领先的综合视频门户网站平台</p>
   </a>
@@ -252,7 +252,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.zhaogepu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.zhaogepu.com" alt="找歌谱网">
+  <img src="http://www.aigepu.com/favicon.ico" alt="找歌谱网">
   <h3>找歌谱网</h3>
   <p>专业歌谱搜索引擎</p>
   </a>
@@ -276,7 +276,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://music.163.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://music.163.com" alt="网易云音乐">
+  <img src="https://s1.music.126.net/style/favicon.ico" alt="网易云音乐">
   <h3>网易云音乐</h3>
   <p>一款专注于发现与分享的音乐产品</p>
   </a>
