--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <li><a href="https://tv.bingdou.net/" target="_blank">看电视</a></li>
 		<li><a href="https://v.bingdou.xyz/" target="_blank">看电影</a></li>
 		<li><a href="https://music.bingdou.xyz/" target="_blank">听音乐</a></li>
-		<li><a href="https://vod.bingdou.xyz/" target="_blank">视频云播</a></li>
+		<li><a href="https://vod.bingdou.net/" target="_blank">视频云播</a></li>
 		<li><a href="https://so.bingdou.net/" target="_blank">实用搜索</a></li>
 		<li><a href="https://win.bingdou.net/" target="_blank">系统下载</a></li>
 	 </ul>
@@ -349,7 +349,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.chinanews.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.chinanews.com" alt="中国新闻网">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="中国新闻网">
   <h3>中国新闻网</h3>
   <p>全球互联网中文新闻资讯最重要的原创内容供应商之一</p>
   </a>
@@ -373,7 +373,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.sohu.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.sohu.com" alt="搜狐网">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="搜狐网">
   <h3>搜狐网</h3>
   <p>提供24小时不间断的最新资讯</p>
   </a>
@@ -437,7 +437,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.tmtpost.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.tmtpost.com" alt="钛媒体">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="钛媒体">
   <h3>钛媒体</h3>
   <p>国内首家TMT公司人社群媒体</p>
   </a>
@@ -511,7 +511,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.yy.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.yy.com" alt="YY直播">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="YY直播">
   <h3>YY直播</h3>
   <p>致力于打造全民娱乐的互动直播平台</p>
   </a>
@@ -527,7 +527,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://live.kuaishou.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://live.kuaishou.com" alt="快手直播">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="快手直播">
   <h3>快手直播</h3>
   <p>快手游戏直播，又快又好的游戏直播</p>
   </a>
@@ -688,7 +688,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.suning.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.suning.com" alt="苏宁易购">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="苏宁易购">
   <h3>苏宁易购</h3>
   <p>综合网上购物平台</p>
   </a>
@@ -873,7 +873,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.tianya.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.tianya.cn" alt="天涯社区">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="天涯社区">
   <h3>天涯社区</h3>
   <p>提供论坛、部落、博客、问答、文学、相册、个人空间等服务</p>
   </a>
@@ -889,7 +889,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.douban.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.douban.com" alt="豆瓣">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="豆瓣">
   <h3>豆瓣</h3>
   <p>提供图书、电影、音乐唱片的推荐、评论和价格比较，以及城市独特的文化生活</p>
   </a>
@@ -985,7 +985,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.fliggy.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.fliggy.com" alt="飞猪旅行">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="飞猪旅行">
   <h3>飞猪旅行</h3>
   <p>阿里巴巴旗下的综合性旅游出行服务平台</p>
   </a>
@@ -1251,7 +1251,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://bde4.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://bde4.com" alt="哔嘀影视">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="哔嘀影视">
   <h3>哔嘀影视</h3>
   <p>所有支持在线播放资源提供直链高速下载</p>
   </a>
@@ -1267,7 +1267,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.languang.co" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.languang.co" alt="蓝光网">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="蓝光网">
   <h3>蓝光网</h3>
   <p>蓝光高清电影爱好者的聚集地</p>
   </a>
@@ -1283,7 +1283,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://415.net" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.5btjia.com" alt="BT之家">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="BT之家">
   <h3>BT之家</h3>
   <p>提供BT下载,bt种子的bt电影下载论坛</p>
   </a>
@@ -1291,7 +1291,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.zuidazy4.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.zuidazy4.com" alt="最大资源网">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="最大资源网">
   <h3>最大资源网</h3>
   <p>全球最大在线电影资源网站</p>
   </a>
@@ -1299,7 +1299,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.dytt8.net" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.dytt8.net" alt="电影天堂">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="电影天堂">
   <h3>电影天堂</h3>
   <p>最好的迅雷电影下载网</p>
   </a>
@@ -1307,7 +1307,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.bttwo.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.bttwo.com" alt="两个BT">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="两个BT">
   <h3>两个BT</h3>
   <p>BT种子下载，免费电影资源下载</p>
   </a>
@@ -1323,7 +1323,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.btbuluo.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.btbuluo.com" alt="BT部落天堂">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="BT部落天堂">
   <h3>BT部落天堂</h3>
   <p>注重体验与质量的影视资源下载网站</p>
   </a>
@@ -1380,7 +1380,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.bookmarkearth.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.bookmarkearth.com" alt="书签地球">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="书签地球">
   <h3>书签地球</h3>
   <p>中国首家浏览器书签共享平台</p>
   </a>
@@ -1412,7 +1412,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.gsxt.gov.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.gsxt.gov.cn" alt="国家企业信用信息公示系统">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="国家企业信用信息公示系统">
   <h3>企业信息查询</h3>
   <p>国家企业信用信息公示系统</p>
   </a>
@@ -1429,7 +1429,7 @@
   <div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.ctfile.com/linker/1675875" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.ctfile.com" alt="城通网盘">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="城通网盘">
   <h3>城通网盘</h3>
   <p>50TB超大免费网络存储空间服务</p>
   </a>
@@ -1437,7 +1437,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://cloud.189.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://cloud.189.cn" alt="天翼云盘">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="天翼云盘">
   <h3>天翼云盘</h3>
   <p>中国电信推出的云存储服务：不限速，好用，容量大</p>
   </a>
@@ -1445,7 +1445,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://yun.139.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://yun.139.com" alt="和彩云">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="和彩云">
   <h3>和彩云</h3>
   <p>中国移动和彩云网盘：移动用户20G，非移动用户10G，下载速度不错。</p>
   </a>
@@ -1453,7 +1453,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.wocloud.com.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.wocloud.com.cn" alt="沃家云盘">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="沃家云盘">
   <h3>沃家云盘</h3>
   <p>中国联通推出的云存储服务：不限速，500G容量，单日流量上限10G</p>
   </a>
@@ -1501,7 +1501,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://pan.xunlei.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://pan.xunlei.com" alt="迅雷云盘">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="迅雷云盘">
   <h3>迅雷云盘</h3>
   <p>T级超大空间，可存上千部高清电影</p>
   </a>
@@ -1525,7 +1525,7 @@
   </div></div></div></div><div class="part" id="photography" data-title="摄影美图"><h2 class=""><strong>摄影美图</strong></h2><div class="items "><div class="row"><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.moko.cc" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.moko.cc" alt="美空">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="美空">
   <h3>美空</h3>
   <p>设计P图累的时候，不妨到这里看看美女吧</p>
   </a>
@@ -1613,7 +1613,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://vision.xitek.com/sight/" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://vision.xitek.com" alt="无忌视界">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="无忌视界">
   <h3>无忌视界</h3>
   <p>国内外优秀摄影师的线上展览平台，开阔眼界</p>
   </a>
@@ -1661,7 +1661,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://zh.pixfix.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://zh.pixfix.com" alt="Pix Fix">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="Pix Fix">
   <h3>Pix Fix</h3>
   <p>搞定含噪和质量下降的图像</p>
   </a>
@@ -1669,7 +1669,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://tinypng.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://tinypng.com" alt="TinyPNG">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="TinyPNG">
   <h3>TinyPNG</h3>
   <p>知名图片压缩工具，可批量处理</p>
   </a>
@@ -1677,7 +1677,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://zhitu.isux.us" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://zhitu.isux.us" alt="智图">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="智图">
   <h3>智图</h3>
   <p>图片压缩在线工具</p>
   </a>
@@ -1685,7 +1685,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.remove.bg/zh" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.remove.bg/zh" alt="remove.bg">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="remove.bg">
   <h3>remove.bg</h3>
   <p>消除图片中的背景</p>
   </a>
@@ -1765,7 +1765,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=https://www.ageeye.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=https://www.ageeye.cn" alt="发现中国">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="发现中国">
   <h3>发现中国</h3>
   <p>知识地图制作分享平台</p>
   </a>
@@ -1789,7 +1789,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://yciyun.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://yciyun.com" alt="易词云">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="易词云">
   <h3>易词云</h3>
   <p>最简单的在线生成中文字云的网站</p>
   </a>
@@ -1821,7 +1821,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.icbc.com.cn/icbc" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.icbc.com.cn/icbc" alt="中国工商银行">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="中国工商银行">
   <h3>中国工商银行</h3>
   <p>金融服务全面介绍，投资理财信息丰富全面</p>
   </a>
@@ -1845,7 +1845,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://bank.pingan.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://bank.pingan.com" alt="平安银行">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="平安银行">
   <h3>平安银行</h3>
   <p>致力于为客户提供全方位的银行服务</p>
   </a>
@@ -1869,7 +1869,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.psbc.com" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.psbc.com" alt="中国邮政储蓄银行">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="中国邮政储蓄银行">
   <h3>中国邮政储蓄银行</h3>
   <p>为中国经济转型中最具活力的客户群体提供服务</p>
   </a>
@@ -1901,7 +1901,7 @@
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
   <a href="https://api.qianqi.net/go/?url=http://www.hrxjbank.com.cn" target="_blank">
-  <img src="https://api.qianqi.net/icon/?url=http://www.hrxjbank.com.cn" alt="华融湘江银行">
+  <img src="https://cdn.jsdelivr.net/gh/yellowside/3600/images/e.png" alt="华融湘江银行">
   <h3>华融湘江银行</h3>
   <p>国有股份制商业银行</p>
   </a>
